fixed notification button alignment

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -65,7 +65,7 @@ h2 {
   margin-top: 0;
 }
 
-.app-container > *:not(.blog-list):not(.action-buttons-bar) {
+.app-container > *:not(.blog-list):not(.action-buttons-bar):not(.notification) {
   padding-left: 20px;
   padding-right: 20px;
 }
@@ -182,6 +182,8 @@ button.small {
   border: 3px solid var(--secondary-color);
   font-weight: 600;
   box-shadow: 5px 5px 0px rgba(0, 0, 0, 0.9);
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 .error {
